// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should match the snapshot when a user has not clicked on a location 1`] = `
<Component
  style={
    Object {
      "height": "70%",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "height": "62%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": "62%",
          "left": 0,
          "opacity": 0.5,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Themed.Icon
      color="white"
      name="camera-retro"
      size={40}
      top={-55}
      type="font-awesome"
    />
    <Component
      style={
        Object {
          "color": "white",
          "fontSize": 16,
          "fontWeight": "600",
          "padding": 10,
          "top": -50,
        }
      }
    >
      Earn gems by taking and uploading pics of you at various locations
    </Component>
  </ImageBackground>
  <MockMapView
    initialRegion={
      Object {
        "latitude": 23.4,
        "latitudeDelta": 0.015,
        "longitude": 104.8,
        "longitudeDelta": 0.0121,
      }
    }
    provider="google"
    showsUserLocation={true}
    style={
      Object {
        "height": "77%",
        "top": "-24%",
        "width": "100%",
      }
    }
  >
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.75302,
          "longitude": -104.9965,
        }
      }
      key="1"
      onPress={[Function]}
      pinColor="#000FFF"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Summit
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            example 1 description
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.75023,
          "longitude": -104.9965,
        }
      }
      key="2"
      onPress={[Function]}
      pinColor="#FFF000"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            The Delectable Egg
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            example 2 description
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.77023,
          "longitude": -104.9965,
        }
      }
      key="3"
      onPress={[Function]}
      pinColor="#000FFF"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Far away example
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            over a mile away
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
  </MockMapView>
</Component>
`;

exports[`Home when a user clicks on a marker location but has not visited the location should match the snapshot if the user is too far away to take a photo 1`] = `
<Component
  style={
    Object {
      "height": "70%",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "height": "62%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": "62%",
          "left": 0,
          "opacity": 0.5,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Component
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Component
        style={
          Object {
            "color": "white",
            "fontSize": 22,
            "fontWeight": "600",
            "padding": 10,
            "top": -65,
          }
        }
      />
    </Component>
    <Component
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Themed.Icon
        color="#f44336"
        name="diamond"
        size={15}
        top={-58}
        type="font-awesome"
      />
      <Component
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 16,
              "fontWeight": "600",
              "paddingLeft": 10,
              "top": -60,
            },
            Object {
              "color": "white",
              "left": -5,
              "top": -63,
            },
          ]
        }
      >
        10
         gems
      </Component>
    </Component>
    <Component
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Themed.Icon
        color="#00bcd4"
        name="car"
        size={15}
        top={-57}
        type="font-awesome"
      />
      <Component
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "600",
            "paddingLeft": 10,
            "top": -60,
          }
        }
      >
        2
         mi. away
      </Component>
    </Component>
    <Component>
      <Component
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 16,
              "fontWeight": "600",
              "paddingLeft": 10,
              "top": -60,
            },
            Object {
              "fontSize": 13,
              "top": -50,
            },
          ]
        }
      >
        Get within 1 mile of the landmark to take a photo and add it to your collection
      </Component>
    </Component>
  </ImageBackground>
  <MockMapView
    initialRegion={
      Object {
        "latitude": 23.4,
        "latitudeDelta": 0.015,
        "longitude": 104.8,
        "longitudeDelta": 0.0121,
      }
    }
    provider="google"
    showsUserLocation={true}
    style={
      Object {
        "height": "77%",
        "top": "-24%",
        "width": "100%",
      }
    }
  >
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.75302,
          "longitude": -104.9965,
        }
      }
      key="1"
      onPress={[Function]}
      pinColor="#000FFF"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Summit
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            example 1 description
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.75023,
          "longitude": -104.9965,
        }
      }
      key="2"
      onPress={[Function]}
      pinColor="#FFF000"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            The Delectable Egg
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            example 2 description
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.77023,
          "longitude": -104.9965,
        }
      }
      key="3"
      onPress={[Function]}
      pinColor="#000FFF"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Far away example
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            over a mile away
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
  </MockMapView>
</Component>
`;

exports[`Home when the user clicks a location that they have already visited and are close enough to retake a photo should match the snapshot when the user clicks a location 1`] = `
<Component
  style={
    Object {
      "height": "70%",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "height": "62%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": "62%",
          "left": 0,
          "opacity": 0.5,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Component
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Component
        style={
          Object {
            "color": "white",
            "fontSize": 22,
            "fontWeight": "600",
            "padding": 10,
            "top": -65,
          }
        }
      />
    </Component>
    <Component
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Themed.Icon
        color="#f44336"
        name="diamond"
        size={15}
        top={-58}
        type="font-awesome"
      />
      <Component
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 16,
              "fontWeight": "600",
              "paddingLeft": 10,
              "top": -60,
            },
            Object {
              "color": "white",
              "left": -5,
              "top": -63,
            },
          ]
        }
      >
        10
         gems
      </Component>
    </Component>
    <Component
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Themed.Icon
        color="#00bcd4"
        name="car"
        size={15}
        top={-57}
        type="font-awesome"
      />
      <Component
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 16,
              "fontWeight": "600",
              "paddingLeft": 10,
              "top": -60,
            },
            Object {
              "color": "white",
            },
          ]
        }
      >
        0
         mi. away 
      </Component>
    </Component>
    <Component
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "bottom": 20,
            "position": "absolute",
            "right": 20,
            "zIndex": 3,
          }
        }
      >
        <Themed.Icon
          color="#4caf50"
          left={21}
          name="camera"
          size={15}
          top={3}
          type="font-awesome"
        />
        <Component
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 16,
                "fontWeight": "600",
                "paddingLeft": 10,
                "top": -60,
              },
              Object {
                "left": 90,
                "top": -16,
              },
            ]
          }
        >
          Retake Photo
        </Component>
      </TouchableOpacity>
    </Component>
  </ImageBackground>
  <MockMapView
    initialRegion={
      Object {
        "latitude": 23.4,
        "latitudeDelta": 0.015,
        "longitude": 104.8,
        "longitudeDelta": 0.0121,
      }
    }
    provider="google"
    showsUserLocation={true}
    style={
      Object {
        "height": "77%",
        "top": "-24%",
        "width": "100%",
      }
    }
  >
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.75302,
          "longitude": -104.9965,
        }
      }
      key="1"
      onPress={[Function]}
      pinColor="#000FFF"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Summit
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            example 1 description
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.75023,
          "longitude": -104.9965,
        }
      }
      key="2"
      onPress={[Function]}
      pinColor="#FFF000"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            The Delectable Egg
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            example 2 description
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.77023,
          "longitude": -104.9965,
        }
      }
      key="3"
      onPress={[Function]}
      pinColor="#000FFF"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Far away example
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            over a mile away
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
  </MockMapView>
</Component>
`;

exports[`Home when the user clicks a location that they have already visited but they are not close enough to retake a photo 1`] = `
<Component
  style={
    Object {
      "height": "70%",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "height": "62%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": "62%",
          "left": 0,
          "opacity": 0.5,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Component
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Component
        style={
          Object {
            "color": "white",
            "fontSize": 22,
            "fontWeight": "600",
            "padding": 10,
            "top": -65,
          }
        }
      />
    </Component>
    <Component
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Themed.Icon
        color="#f44336"
        name="diamond"
        size={15}
        top={-58}
        type="font-awesome"
      />
      <Component
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 16,
              "fontWeight": "600",
              "paddingLeft": 10,
              "top": -60,
            },
            Object {
              "color": "white",
              "left": -5,
              "top": -63,
            },
          ]
        }
      >
        10
         gems
      </Component>
    </Component>
    <Component
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Themed.Icon
        color="#00bcd4"
        name="car"
        size={15}
        top={-57}
        type="font-awesome"
      />
      <Component
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 16,
              "fontWeight": "600",
              "paddingLeft": 10,
              "top": -60,
            },
            Object {
              "color": "white",
            },
          ]
        }
      >
        2
         mi. away 
      </Component>
    </Component>
  </ImageBackground>
  <MockMapView
    initialRegion={
      Object {
        "latitude": 23.4,
        "latitudeDelta": 0.015,
        "longitude": 104.8,
        "longitudeDelta": 0.0121,
      }
    }
    provider="google"
    showsUserLocation={true}
    style={
      Object {
        "height": "77%",
        "top": "-24%",
        "width": "100%",
      }
    }
  >
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.75302,
          "longitude": -104.9965,
        }
      }
      key="1"
      onPress={[Function]}
      pinColor="#000FFF"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Summit
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            example 1 description
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.75023,
          "longitude": -104.9965,
        }
      }
      key="2"
      onPress={[Function]}
      pinColor="#FFF000"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            The Delectable Egg
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            example 2 description
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
    <MockMarker
      coordinate={
        Object {
          "latitude": 39.77023,
          "longitude": -104.9965,
        }
      }
      key="3"
      onPress={[Function]}
      pinColor="#000FFF"
    >
      <MockCallout
        tooltip={true}
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "display": "flex",
              "flexDirection": "column",
              "fontSize": 14,
              "padding": 10,
            }
          }
        >
          <Component
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Far away example
          </Component>
          <Component
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
            over a mile away
          </Component>
          <Component>
            Distance away: mi
          </Component>
          <Component>
            Visited: no
          </Component>
          <Component>
            Link - takes to camera
          </Component>
        </Component>
      </MockCallout>
    </MockMarker>
  </MockMapView>
</Component>
`;
